[package]
name = "yet-another-pocketbase-library"
description = "Yet Another Pocketbase Library (YAPL) is a library for interfacing and communicating with Pocketbase"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros"] }
